deploy.example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-garderie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp-garderie
  template:
    metadata:
      labels:
        app: myapp-garderie
    spec:
      containers:
        - name: myapp-garderie
          image: yassinsiouda/garderie:0.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /sites
              subPath: sites
            - name: data
              mountPath: /pb_data
              subPath: pb_data
            - name: data
              mountPath: /pb_hooks
              subPath: pb_hooks
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: myapp-garderie-data
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-garderie
spec:
  selector:
    app: myapp-garderie
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-garderie
spec:
  rules:
    - host: myapp-garderie.k3s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-garderie
                port:
                  number: 80
